--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.5.10'
+    id 'application'
 }
 
 group 'com.github.mkbaldwin'
@@ -13,9 +14,14 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.5.31'
     implementation 'com.influxdb:influxdb-client-kotlin:3.3.0'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.13.0'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+}
+
+application {
+    mainClass = "com.github.mkbaldwin.weatherpi.MainKt"
 }
 
 test {
